--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28427,8 +28427,8 @@ msgstr "Error sending notification to Gotify: "
 msgid "Push notification settings (JSON)"
 msgstr "Push notification settings (JSON)"
 
-msgid "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
-msgstr "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
+msgid "JSON configuration for Push notifications integration."
+msgstr "JSON configuration for Push notifications integration."
 
 msgid "Access denied"
 msgstr "Access denied"
