--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28395,7 +28395,7 @@ msgstr ""
 msgid "Push notification settings (JSON)"
 msgstr ""
 
-msgid "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
+msgid "JSON configuration for Push notifications integration."
 msgstr ""
 
 msgid "Access denied"
