Language: Remove single-quote escaping in Vue's locales

--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -207,7 +207,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -273,7 +273,7 @@
     "E-mail": "Correu electr\u00f2nic",
     "Your company's name": "Nom de l'empresa",
     "Your company's activity": "Sector",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Pa\u00eds",
     "Company city": "Ciutat",
     "Preferred contact language": "Quin idioma de contacte prefereix?",
@@ -333,7 +333,7 @@
     "Link name": "Nom de l'enlla\u00e7",
     "Show link on course homepage": "Mostrar l'enlla\u00e7 a la p\u00e0gina principal",
     "Select a category": "Seleccioneu una categoria",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Guardar enlla\u00e7",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -500,7 +500,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Termes i condicions",
     "Read the Terms and Conditions": "Llegeix les condicions del servei",
     "Legal agreement accepted": "Condicions legals acceptades",
