--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -197,7 +197,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -261,7 +261,7 @@
     "Dear user": "Erabiltzaile estimatu hori",
     "Your company's name": "Enpresaren izena",
     "Your company's activity": "Enpresaren arloa",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Enpresa egoitzaren Estatua",
     "Company city": "Enpresaren hiria",
     "Preferred contact language": "Zer hizkuntza nahiago duzu harremanetan?",
@@ -321,7 +321,7 @@
     "Link name": "Loturaren izena",
     "Show link on course homepage": "Ikastaroaren orri nagusian lotura erakutsi?",
     "Select a category": "Hautatu kategoria bat",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Gorde lotura",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -481,7 +481,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Terminoak eta baldintzak",
     "Read the Terms and Conditions": "Irakurri Terminoak eta baldintzak",
     "Legal agreement accepted": "Lege hitzarmena onartu da",
