--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -211,7 +211,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -278,7 +278,7 @@
     "E-mail": "Courriel",
     "Your company's name": "Nom de votre entreprise",
     "Your company's activity": "Activit\u00e9 de votre entreprise",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Pays de votre entreprise",
     "Company city": "Ville de votre entreprise",
     "Preferred contact language": "Langue de contact favorite",
@@ -338,7 +338,7 @@
     "Link name": "Nom du lien",
     "Show link on course homepage": "Sur la page d'accueil",
     "Select a category": "S\u00e9lectionnez une cat\u00e9gorie",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Enregistrer le lien",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -517,7 +517,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "Introduction \u00e0 vos donn\u00e9es personnelles",
     "Personal data we keep about you": "Donn\u00e9es personnelles que nous conservons \u00e0 votre sujet",
     "Terms and Conditions": "Conditions d'utilisation",
