--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -210,7 +210,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -277,7 +277,7 @@
     "E-mail": "\u0627\u0644\u0628\u0631\u064a\u062f",
     "Your company's name": "\u0627\u0633\u0645 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
     "Your company's activity": "\u0646\u0634\u0627\u0637\u0627\u062a \u0645\u0646\u0638\u0645\u062a\u0643",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "\u0627\u0644\u062f\u0648\u0644\u0629 \u0627\u0644\u0627\u0645 \u0644\u0644\u0645\u0646\u0638\u0645\u0629",
     "Company city": "\u0627\u0644\u0645\u062f\u064a\u0646\u0629 \u0627\u0644\u062a\u064a \u062a\u0642\u0639 \u0641\u064a\u0647\u0627 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
     "Preferred contact language": "\u0644\u063a\u0629 \u0627\u0644\u062a\u0648\u0627\u0635\u0644 \u0627\u0644\u0645\u0641\u0636\u0644\u0629",
@@ -337,7 +337,7 @@
     "Link name": "\u0627\u0633\u0645 \u0627\u0644\u0631\u0627\u0628\u0637",
     "Show link on course homepage": "\u0623\u0638\u0647\u0631 \u0627\u0644\u0631\u0627\u0628\u0637 \u0641\u064a \u0627\u0644\u0635\u0641\u062d\u0629 \u0627\u0644\u0631\u0626\u0633\u064a\u0629",
     "Select a category": " \u0627\u062e\u062a\u0627\u0631 \u0627\u0644\u0641\u0626\u0629",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "\u062d\u0641\u0638 \u0627\u0644\u0631\u0627\u0628\u0637",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -516,7 +516,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "\u0628\u064a\u0627\u0646\u0627\u062a \u0634\u062e\u0635\u064a\u0629: \u0645\u0642\u062f\u0645\u0629",
     "Personal data we keep about you": "\u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a \u0627\u0644\u0634\u062e\u0635\u064a\u0629 \u0627\u0644\u062a\u064a \u0646\u062d\u062a\u0641\u0638 \u0628\u0647\u0627 \u062d\u0648\u0644\u0643",
     "Terms and Conditions": "\u0627\u0644\u0634\u0631\u0648\u0637 \u0648\u0627\u0644\u0627\u062d\u0643\u0627\u0645",
