--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -182,7 +182,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -241,7 +241,7 @@
     "Dear user": "\u0423\u0432\u0430\u0436\u0430\u0435\u043c\u0438 \u0433\u043e\u0441\u043f\u043e\u0434\u0438\u043d\u0435, / \u0423\u0432\u0430\u0436\u0430\u0435\u043c\u0430 \u0433\u043e\u0441\u043f\u043e\u0436\u043e,",
     "Your company's name": "\u0418\u043c\u0435 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
     "Your company's activity": "\u041f\u0440\u0435\u0434\u043c\u0435\u0442 \u043d\u0430 \u0434\u0435\u0439\u043d\u043e\u0441\u0442 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Company city": "\u0421\u0435\u0434\u0430\u043b\u0438\u0449\u0435 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
     "Check database connection": "\u041f\u0440\u043e\u0432\u0435\u0440\u043a\u0430 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430 \u043a\u044a\u043c \u0441\u044a\u0440\u0432\u044a\u0440\u0430 \u0437\u0430 \u0431\u0430\u0437\u0438 \u0434\u0430\u043d\u043d\u0438",
     "Step 4 - Database settings": "Step 4 - Database settings",
@@ -295,7 +295,7 @@
     "URL": "URL (\u0430\u0434\u0440\u0435\u0441)",
     "Link name": "\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430",
     "Show link on course homepage": "\u0414\u0430 \u0441\u0435 \u043f\u043e\u043a\u0430\u0437\u0432\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430 \u0432 <br/>\u043d\u0430\u0447\u0430\u043b\u043d\u0430\u0442\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "\u0417\u0430\u043f\u0438\u0441 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -448,7 +448,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "\u0423\u0441\u043b\u043e\u0432\u0438\u044f \u0437\u0430 \u043f\u043e\u043b\u0437\u0432\u0430\u043d\u0435",
     "Read the Terms and Conditions": "\u041f\u0440\u043e\u0447\u0435\u0442\u0435\u0442\u0435 \u0423\u0441\u043b\u043e\u0432\u0438\u044f\u0442\u0430 \u0437\u0430 \u043f\u043e\u043b\u0437\u0432\u0430\u043d\u0435",
     "Date": "\u0414\u0430\u0442\u0430",
