--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -211,7 +211,7 @@
     "Confirmation": "Best\u00e4tigung",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -278,7 +278,7 @@
     "E-mail": "E-Mail",
     "Your company's name": "Name der  Firma / Organisation",
     "Your company's activity": "T\u00e4tigkeitsbereich Ihrer Firma / Organisation",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Land Ihrer Firma / Organisation",
     "Company city": "Ort Ihrer  Firma / Organisation",
     "Preferred contact language": "Bevorzugte Kontakt-Sprache",
@@ -338,7 +338,7 @@
     "Link name": "Link-Name",
     "Show link on course homepage": "Link auf Homepage anzeigen",
     "Select a category": "W\u00e4hlen Sie eine Kategorie",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Link speichern",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -517,7 +517,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "Pers\u00f6nliche Daten: Einf\u00fchrung",
     "Personal data we keep about you": "Pers\u00f6nliche Daten, die wir \u00fcber Sie speichern",
     "Terms and Conditions": "Nutzungsbedingungen",
