--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -211,7 +211,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -278,7 +278,7 @@
     "E-mail": "E-mail",
     "Your company's name": "Your company's name",
     "Your company's activity": "Your company's activity",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Your company's home country",
     "Company city": "Company city",
     "Preferred contact language": "Preferred contact language",
@@ -338,7 +338,7 @@
     "Link name": "Link name",
     "Show link on course homepage": "Show link on course homepage",
     "Select a category": "Select a category",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Save link",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -517,7 +517,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "Personal data: introduction",
     "Personal data we keep about you": "Personal data we keep about you",
     "Terms and Conditions": "Terms and Conditions",
