--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -211,7 +211,7 @@
     "Confirmation": "Confirmaci\u00f3n",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -278,7 +278,7 @@
     "E-mail": "Correo electr\u00f3nico",
     "Your company's name": "Nombre de la empresa",
     "Your company's activity": "Sector",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Pa\u00eds",
     "Company city": "Ciudad",
     "Preferred contact language": "\u00bfQu\u00e9 idioma de contacto prefiere?",
@@ -338,7 +338,7 @@
     "Link name": "Nombre del enlace",
     "Show link on course homepage": "\u00bf Mostrar el enlace en la p\u00e1gina principal del curso",
     "Select a category": "Seleccione una categor\u00eda",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Guardar el enlace",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -517,7 +517,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "Datos personales: introducci\u00f3n",
     "Personal data we keep about you": "Datos personales que guardamos sobre Usted",
     "Terms and Conditions": "T\u00e9rminos y condiciones",
