--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -187,7 +187,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -239,7 +239,7 @@
     "Dear user": "\u06a9\u0627\u0631\u0628\u0631 \u06af\u0631\u0627\u0645\u06cc",
     "Your company's name": "\u0646\u0627\u0645 \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Your company's activity": "\u0641\u0639\u0627\u0644\u06cc\u062a \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "\u06a9\u0634\u0648\u0631 \u0645\u062d\u0644\u06cc \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Company city": "\u0634\u0647\u0631 \u0634\u0631\u06a9\u062a",
     "Preferred contact language": "\u0632\u0628\u0627\u0646 \u062a\u0645\u0627\u0633 \u067e\u06cc\u0634\u0641\u0631\u0636",
@@ -294,7 +294,7 @@
     "Link name": "\u0646\u0627\u0645 \u067e\u06cc\u0648\u0646\u062f",
     "Show link on course homepage": "\u0646\u0645\u0627\u06cc\u0634 \u067e\u06cc\u0648\u0646\u062f \u062f\u0631 \u0635\u0641\u062d\u0647 \u0627\u0635\u0644\u06cc \u0622\u0645\u0648\u0632\u0634\u06cc",
     "Select a category": "\u0627\u0646\u062a\u062e\u0627\u0628 \u06cc\u06a9 \u062f\u0633\u062a\u0647",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "\u0630\u062e\u06cc\u0631\u0647 \u067e\u06cc\u0648\u0646\u062f",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -447,7 +447,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "\u0634\u0631\u0627\u06cc\u0637 \u0648 \u0636\u0648\u0627\u0628\u0637",
     "Read the Terms and Conditions": "\u0645\u0637\u0627\u0644\u0639\u0647 \u0634\u0631\u0627\u06cc\u0637 \u0648 \u0636\u0648\u0627\u0628\u0637",
     "Date": "\u062a\u0627\u0631\u06cc\u062e",
