--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -209,7 +209,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -276,7 +276,7 @@
     "E-mail": "\u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9",
     "Your company's name": "\u05e9\u05dd \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
     "Your company's activity": "\u05d4\u05e4\u05e2\u05d9\u05dc\u05d5\u05ea \u05e9\u05dc \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "\u05de\u05d3\u05d9\u05e0\u05ea \u05d4\u05d1\u05d9\u05ea \u05e9\u05dc \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
     "Company city": "\u05e2\u05d9\u05e8 \u05d7\u05d1\u05e8\u05d4",
     "Preferred contact language": "\u05e9\u05e4\u05ea \u05d0\u05d9\u05e9 \u05e7\u05e9\u05e8 \u05de\u05d5\u05e2\u05d3\u05e4\u05ea",
@@ -336,7 +336,7 @@
     "Link name": "\u05e9\u05dd \u05e7\u05d9\u05e9\u05d5\u05e8",
     "Show link on course homepage": "\u05d4\u05e6\u05d2 \u05e7\u05d9\u05e9\u05d5\u05e8 \u05d1\u05d3\u05e3 \u05d4\u05d1\u05d9\u05ea \u05e9\u05dc \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Select a category": "\u05d1\u05d7\u05e8 \u05e7\u05d8\u05d2\u05d5\u05e8\u05d9\u05d4",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "\u05e9\u05de\u05d5\u05e8 \u05e7\u05d9\u05e9\u05d5\u05e8",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -513,7 +513,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "\u05ea\u05e0\u05d0\u05d9\u05dd \u05d5\u05d4\u05d2\u05d1\u05dc\u05d5\u05ea",
     "Read the Terms and Conditions": "\u05e7\u05e8\u05d0 \u05d0\u05ea \u05d4\u05ea\u05e0\u05d0\u05d9\u05dd \u05d5\u05d4\u05d4\u05d2\u05d1\u05dc\u05d5\u05ea",
     "Legal agreement accepted": "\u05d4\u05e1\u05db\u05dd \u05de\u05e9\u05e4\u05d8\u05d9 \u05d4\u05ea\u05e7\u05d1\u05dc",
