--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -160,7 +160,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -214,7 +214,7 @@
     "I accept": "Elfogadom",
     "CC website": "CC website",
     "Dear user": "Kedves felhaszn\u00e1l\u00f3",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Check database connection": "Adatb\u00e1zis kapcsolat ellen\u0151rz\u00e9se",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -263,7 +263,7 @@
     "Save category": "Save category",
     "Link name": "Hivatkoz\u00e1s neve",
     "Show link on course homepage": "A hivatkoz\u00e1s megjelen\u00edt\u00e9se a kezd\u0151oldalon.",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Hivatkoz\u00e1s ment\u00e9se",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -412,7 +412,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Why you want to delete your Legal Agreement": "Why you want to delete your Legal Agreement",
     "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible": "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible",
     "Delete Account": "Delete Account",
