--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -209,7 +209,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -275,7 +275,7 @@
     "E-mail": "E-mail",
     "Your company's name": "Il nome della tua organizzazione",
     "Your company's activity": "Settore della tua organizzazione",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Sede centrale dell'organizzazione",
     "Company city": "Citt\u00e0 dell'organizzazione",
     "Preferred contact language": "Lingua di contatto preferita",
@@ -335,7 +335,7 @@
     "Link name": "Nome",
     "Show link on course homepage": "Mostra il collegamento sulla pagina iniziale",
     "Select a category": "Seleziona una categoria",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Salva il collegamento",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -505,7 +505,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Termini e Condizioni",
     "Read the Terms and Conditions": "Leggi i Termini e le Condizioni",
     "Legal agreement accepted": "Licenza d'uso e termini accettati",
