--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -135,7 +135,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -173,7 +173,7 @@
     "Contact information": "\u9023\u7d61\u5148\u60c5\u5831",
     "Step 3 - License": "Step 3 - License",
     "CC website": "CC website",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
     "Database name": "Database name",
@@ -202,7 +202,7 @@
     "Demo": "Demo",
     "Save category": "Save category",
     "Show link on course homepage": "\u30ea\u30f3\u30af\u3092\u30b3\u30fc\u30b9\u306e\u30db\u30fc\u30e0\u30da\u30fc\u30b8\u306b\u8868\u793a",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "\u30ea\u30f3\u30af\u3092\u4fdd\u5b58",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -337,7 +337,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Why you want to delete your Legal Agreement": "Why you want to delete your Legal Agreement",
     "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible": "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible",
     "Delete Account": "Delete Account",
