--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -195,7 +195,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -258,7 +258,7 @@
     "Dear user": "Cien\u012bjamais Kursant,",
     "Your company's name": "J\u016bsu uz\u0146\u0113muma nosaukums",
     "Your company's activity": "J\u016bsu uz\u0146\u0113muma darb\u012bbas veids",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "J\u016bsu uz\u0146\u0113muma m\u012btnes valsts",
     "Company city": "Pils\u0113ta, kur\u0101 atrodas Uz\u0146\u0113mums",
     "Preferred contact language": "V\u0113lam\u0101 kontaktu valoda",
@@ -316,7 +316,7 @@
     "URL": "URL",
     "Link name": "Hipersaites nosaukums",
     "Show link on course homepage": "R\u0101d\u012bt hipersaiti s\u0101kumlap\u0101",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Saglab\u0101t hipersaiti",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -475,7 +475,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Vides lieto\u0161anas \"Noteikumi un Nosac\u012bjumi\" Lietot\u0101jiem",
     "Read the Terms and Conditions": "Las\u012bt \"Noteikumus un Nosac\u012bjumus\"",
     "Legal agreement accepted": "Tiesiskais l\u012bgums pie\u0146emts",
