--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -196,7 +196,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -260,7 +260,7 @@
     "Dear user": "Szanowny u\u017cytkowniku",
     "Your company's name": "Nazwa Twojej firmy",
     "Your company's activity": "Dzia\u0142alno\u015b\u0107 Twojej firmy",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Kraj pochodzenia Twojej firmy",
     "Company city": "Miasto, w kt\u00f3rym znajduje si\u0119 firma",
     "Preferred contact language": "Preferowany j\u0119zyk kontaktu",
@@ -320,7 +320,7 @@
     "Link name": "Nazwa linka/odno\u015bnika",
     "Show link on course homepage": "Poka\u017c link na stronie domowej",
     "Select a category": "Wybierz kategori\u0119",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Zapisz odno\u015bnik",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -480,7 +480,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Regulamin",
     "Read the Terms and Conditions": "Przeczytaj regulamin",
     "Legal agreement accepted": "Regulamin zaakceptowany",
