--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -202,7 +202,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -266,7 +266,7 @@
     "Dear user": "Caro(a) utilizador(a)",
     "Your company's name": "Nome da empresa",
     "Your company's activity": "Actividade da empresa",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Pa\u00eds onde se localiza a empresa?",
     "Company city": "Cidade da empresa",
     "Preferred contact language": "L\u00edngua de contato preferencial?",
@@ -325,7 +325,7 @@
     "Link name": "Nome da liga\u00e7\u00e3o",
     "Show link on course homepage": "Apresentar liga\u00e7\u00e3o/link na p\u00e1gina inicial dos cursos",
     "Select a category": "Selecione uma categoria",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Guardar liga\u00e7\u00e3o",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -489,7 +489,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Termos e condi\u00e7\u00f5es",
     "Read the Terms and Conditions": "Ler os termos e condi\u00e7\u00f5es",
     "Date": "Data",
