--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -205,7 +205,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -269,7 +269,7 @@
     "Dear user": "Stimate utilizator",
     "Your company's name": "Numele companiei",
     "Your company's activity": "Sector",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Tara",
     "Company city": "Oras",
     "Preferred contact language": "Ce limb\u0103 de contactat preferati?",
@@ -329,7 +329,7 @@
     "Link name": "Textul pentru link",
     "Show link on course homepage": "Arata linkul pe pagina principala",
     "Select a category": "Selectionati o categorie",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -493,7 +493,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Termeni si conditii",
     "Read the Terms and Conditions": "Cititi conditiile serviciului",
     "Legal agreement accepted": "Conditii legale acceptate",
