--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -207,7 +207,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -271,7 +271,7 @@
     "Dear user": "V\u00e1\u017een\u00fd pou\u017e\u00edvate\u013e",
     "Your company's name": "N\u00e1zov spolo\u010dnosti",
     "Your company's activity": "Aktivita va\u0161ej spolo\u010dnosti",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Domovsk\u00e1 krajina va\u0161ej spolo\u010dnosti",
     "Company city": "Mesto kde s\u00eddli va\u0161a spolo\u010dnos\u0165",
     "Preferred contact language": "Preferovan\u00fd kontaktn\u00fd jazyk",
@@ -331,7 +331,7 @@
     "Link name": "N\u00e1zov odkazu",
     "Show link on course homepage": "Zobrazi\u0165 tento odkaz na domovskej str\u00e1nke",
     "Select a category": "Vybra\u0165 kateg\u00f3riu",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Ulo\u017ei\u0165 odkaz",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -499,7 +499,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Terms and Conditions": "Podmienky pou\u017e\u00edvania",
     "Read the Terms and Conditions": "Pre\u010d\u00edtajte si Podmienky pou\u017e\u00edvania",
     "Legal agreement accepted": "Pr\u00e1vne dojednania prijal",
