--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -211,7 +211,7 @@
     "Confirmation": "Confirmation",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
-    "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
+    "We're sorry, your browser does not support using a microphone": "We're sorry, your browser does not support using a microphone",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
     "Hide advanced settings": "Hide advanced settings",
     "Show advanced settings": "Show advanced settings",
@@ -278,7 +278,7 @@
     "E-mail": "E-po\u0161ta",
     "Your company's name": "Naziv organizacije/podjetja",
     "Your company's activity": "Aktivnosti tvojega podjetja",
-    "Your job\\'s description": "Your job\\'s description",
+    "Your job's description": "Your job's description",
     "Your company's home country": "Dr\u017eava va\u0161e organizacije/podjetja",
     "Company city": "Mesto organizacije/podjetja",
     "Preferred contact language": "\u017delen jezik pri kontaktu",
@@ -338,7 +338,7 @@
     "Link name": "Ime povezave",
     "Show link on course homepage": "Prika\u017ei povezavo na doma\u010di strani te\u010daja",
     "Select a category": "Izberi kategorijo",
-    "Link\\'s target": "Link\\'s target",
+    "Link's target": "Link's target",
     "Save link": "Shrani povezavo",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -516,7 +516,7 @@
     "New page": "New page",
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
-    "You don\\'t have any course yet": "You don\\'t have any course yet",
+    "You don't have any course yet": "You don't have any course yet",
     "Personal data: introduction": "Osebni podatki: uvod",
     "Personal data we keep about you": "Osebni podatki, ki jih o vas hranimo",
     "Terms and Conditions": "Pogoji rabe",
